--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@soubai/snowpack-react-typescript-tailwind",
+  "name": "Noizer-One",
   "version": "1.0.0",
-  "description": "Boilerplate for Snowpack, React, Typescript, Tailwind",
-  "author": "Abderrahim SOUBAI-ELIDRISI",
+  "description": "Ambient music",
+  "author": "Dmitriy Malakhov",
   "license": "MIT",
   "scripts": {
     "start": "snowpack dev",
@@ -13,14 +13,12 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.171",
-    "@types/react-linkify": "^1.0.1",
+    "@types/react-router-dom": "^5.1.8",
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-input-mask": "^2.0.4",
-    "react-linkify": "^1.0.0-alpha",
-    "react-use-websocket": "^2.7.1",
+    "react-router-dom": "^5.2.0",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
